[project]
name = "multicalc"
version = "1.0.0"
description = "A modular Python calculator with reusable core logic, CLI, REST API, and import — demonstrating a multi-entry architecture."
authors = [
    { name = "Matheus de Andrade", email = "matheusdeandradesv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
]

keywords = ["calculator", "cli", "api", "fastapi", "typer", "example", "modular", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9"
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29"
]
all = [
    "multicalc[cli,api]"
]

[project.scripts]
multicalc = "multicalc.cli:app"
multicalc-serve = "multicalc.api:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
